# embed-files-web-app-c

./: CMakeLists.txt  README.md  generate_embedded_files.sh
src/: embedded_files.c  main.c  web_server.c  web_server.h
web-app-basic/: another-page.html  index.html
web-app-basic/js/: main.js
web-app-vuejs/: README.md  index.html  package-lock.json  package.json
web-app-vuejs/src/: App.vue
web-app-vuejs/src/router/: index.js
web-app-vuejs/src/views/: HomeView.vue  Page2View.vue
web-app/css/: style.css
